# conan-boost

./: .gitignore  .launcher.py  .travis.yml  FindBoost.cmake  LICENSE  OriginalFindBoost_3_0_2.cmake  OriginalFindBoost_3_4_3.cmake  README.md  appveyor.yml  build.py  build_with_docker.py  conanfile.py  profile.txt
.travis/: install.sh
patches/: boost_build_configure_relevant.patch  msvc.jam-1.65.1.patch  os.jam.patch  python_base_prefix.patch  static_object_init.patch
test/: CMakeLists.txt  conanfile.py
test_package/: CMakeLists.txt  conanfile.py  lambda.cpp  locale_use_icu.cpp  regex.cpp  regex_use_icu.cpp
test_package/cmake/: FindICU.cmake
